--- a/views/index.jade
+++ b/views/index.jade
@@ -16,10 +16,34 @@ html
                     div(class="item")
                         a(class="ui primary button") Sign up
 
-        div(ng-app="geekModule")
-
+        div(ng-app="geekModule", ng-controller="ejs2jadeCtrl")
+            p &nbsp;
+            p &nbsp;
+            p &nbsp;
+            p &nbsp;
+            textarea(ng-model="data.ejs", rows="10", cols="120")
+            textarea(ng-model="data.jade", rows="10", cols="120")
+            button(ng-click="convert()") Convert!
+            pre(ng-model="data.errors")
 
         div
             script(src="#{cdn.host}bower_components/jquery/dist/jquery.min.js?#{cdn.version}")
             script(src="#{cdn.host}semantic/dist/semantic.min.js?#{cdn.version}")
+            script(src="#{cdn.host}bower_components/angular/angular.min.js?#{cdn.version}")
+            script(src="#{cdn.host}the-ejs2jade.js?#{cdn.version}")
             script(type="text/javascript").
+                angular.module('geekModule', [])
+                        .controller('ejs2jadeCtrl', ['$scope', function ($scope) {
+                            $scope.data = {
+                                ejs: '',
+                                jade: '',
+                                errors: []
+                            };
+
+                            $scope.convert = function () {
+                                var ret = ejs2jade.convert($scope.data.ejs);
+                                $scope.data.jade = ret.jade;
+                                $scope.data.errors = ret.errors;
+                            };
+                        }])
+                ;
