--- a/views/index.jade
+++ b/views/index.jade
@@ -6,44 +6,39 @@ html
         title!= title
         link(rel="stylesheet", type="text/css", href="#{cdn.host}semantic/dist/semantic.min.css?#{cdn.version}")
     body
-        div(class="ui large top fixed hidden menu")
-            div(class="ui container")
-                a(class="active item") Home
-                a(class="item") Work
-                div(class="right menu")
-                    div(class="item")
-                        a(class="ui button") Log in
-                    div(class="item")
-                        a(class="ui primary button") Sign up
+        div.ui.padded.container(ng-app="geekModule", ng-controller="ejs2jadeCtrl")
+            form.ui.form
+                div.field
+                    div.ui.grid
+                        div.seven.wide.column
+                            h3 EJS / html
+                            textarea(ng-model="data.ejs", style="width: 100%;", rows="30")
+                        div.two.wide.column
+                            h3 &nbsp;
+                            button.ui.button(ng-click="convert()") Convert!
+                        div.seven.wide.column
+                            h3 jade / pug
+                            textarea(ng-model="data.jade", rows="30", style="width: 100%;")
+                div.field
+                    pre(ng-model="data.errors")
 
-        div(ng-app="geekModule", ng-controller="ejs2jadeCtrl")
-            p &nbsp;
-            p &nbsp;
-            p &nbsp;
-            p &nbsp;
-            textarea(ng-model="data.ejs", rows="10", cols="120")
-            textarea(ng-model="data.jade", rows="10", cols="120")
-            button(ng-click="convert()") Convert!
-            pre(ng-model="data.errors")
+        script(src="#{cdn.host}bower_components/jquery/dist/jquery.min.js?#{cdn.version}")
+        script(src="#{cdn.host}semantic/dist/semantic.min.js?#{cdn.version}")
+        script(src="#{cdn.host}bower_components/angular/angular.min.js?#{cdn.version}")
+        script(src="#{cdn.host}the-ejs2jade.js?#{cdn.version}")
+        script(type="text/javascript").
+            angular.module('geekModule', [])
+                    .controller('ejs2jadeCtrl', ['$scope', function ($scope) {
+                        $scope.data = {
+                            ejs: '',
+                            jade: '',
+                            errors: []
+                        };
 
-        div
-            script(src="#{cdn.host}bower_components/jquery/dist/jquery.min.js?#{cdn.version}")
-            script(src="#{cdn.host}semantic/dist/semantic.min.js?#{cdn.version}")
-            script(src="#{cdn.host}bower_components/angular/angular.min.js?#{cdn.version}")
-            script(src="#{cdn.host}the-ejs2jade.js?#{cdn.version}")
-            script(type="text/javascript").
-                angular.module('geekModule', [])
-                        .controller('ejs2jadeCtrl', ['$scope', function ($scope) {
-                            $scope.data = {
-                                ejs: '',
-                                jade: '',
-                                errors: []
-                            };
-
-                            $scope.convert = function () {
-                                var ret = ejs2jade.convert($scope.data.ejs);
-                                $scope.data.jade = ret.jade;
-                                $scope.data.errors = ret.errors;
-                            };
-                        }])
-                ;
+                        $scope.convert = function () {
+                            var ret = ejs2jade.convert($scope.data.ejs);
+                            $scope.data.jade = ret.jade;
+                            $scope.data.errors = ret.errors;
+                        };
+                    }])
+            ;
