--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ html
         title!= title
         link(rel="stylesheet", type="text/css", href="#{cdn.host}semantic/dist/semantic.min.css?#{cdn.version}")
     body
+        include partial/nav
         div.ui.padded.container(ng-app="geekModule", ng-controller="ejs2jadeCtrl")
             form.ui.form(ng-class="{'loading': loading}", ng-submit="convert()", name="convertForm")
                 div.field
