--- a/views/partial/nav.jade
+++ b/views/partial/nav.jade
@@ -1,6 +1,6 @@
 div.ui.purple.inverted.menu
     a.active.item
-        i.users.icon
+        i.exchange.icon
         | #{__('EJS/html 转成 Jade/pug')}
     a.item(href="https://github.com/Jeff-Tian/geek", target="_blank")
         i.github.alternate.icon
